Added a wrapper main class for invoking other tools.  Added apache ivy support for dependency resolution.